# leancrawler

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  tox.ini
leancrawler/: crawler.lean  crawler.py
src/leancrawler/: __init__.py  crawler.py  db_storage.py  deps.lean  graph.py  python_storage.py
tests/: test.yaml  test_dummy.py  test_python_storage.py
