[tool]
[tool.poetry]
name = "leancrawler"
version = "0.0.3"
description = "A Lean prover library crawler"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent"]
homepage = "https://github.com/leanprover-community/leancrawler"
authors = ["Patrick Massot <patrickmassot@free.fr>"]
readme = "README.md"
license = "Apache-2.0"
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.scripts]
leancrawler = "leancrawler.crawler:crawl"

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.1"
pydot = "^1.4.1"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
flake8 = "^4.0.1"
mypy = "^0.931"
tox = "^3.24.5"
tox-poetry-installer = "^0.8.3"
types-PyYAML = "^6.0.4"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
